--- a/disclaimer.htm
+++ b/disclaimer.htm
@@ -142,8 +142,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-70634.htm">深圳市领养宠物中心地址（深圳市领养宠物中心地址电话）</a></h4>
-                <p>摘要：       本篇文章给大家谈谈深圳市领养宠物中心地址，以及深圳市领养宠物中心地址电话对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、深圳最大的宠物寄养中心在哪...  </p>
+                <h4><a href="/news/article-79379.htm">mysql5.7自动创建分区</a></h4>
+                <p>实现了下自动按月表分区，开发环境为Mysql 5.7.28 核心的两个存储过程： auto_create_partition为创建表分区，调用后为该表创建到下月结束的表分区。 auto_del_par</p>
             </div>
         </div>
     </div>
@@ -152,8 +152,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-71287.htm">宠物粮品牌起名字大全集图片及价格（宠物粮品牌名称）</a></h4>
-                <p>摘要：       本篇文章给大家谈谈宠物粮品牌起名字大全集图片及价格，以及宠物粮品牌名称对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、世界十大顶级狗粮品牌...      </p>
+                <h4><a href="/news/article-81477.htm">动物疫苗可以自己打吗现在（动物疫苗可以自己打吗现在疫情）</a></h4>
+                <p>摘要：       今天给各位分享动物疫苗可以自己打吗现在的知识，其中也会对动物疫苗可以自己打吗现在疫情进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、怎么自.</p>
             </div>
         </div>
     </div>
@@ -162,8 +162,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-82873.htm">动物疫苗接种方法及注意事项有哪些呢图片大全（动物疫苗接种方式）</a></h4>
-                <p>摘要：       今天给各位分享动物疫苗接种方法及注意事项有哪些呢图片大全的知识，其中也会对动物疫苗接种方式进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、.</p>
+                <h4><a href="/news/article-75287.htm">北京宠物医院前十名一朝阳区宠爱医院（北京朝阳区宠物医院哪个好）</a></h4>
+                <p>摘要：       今天给各位分享北京宠物医院前十名一朝阳区宠爱医院的知识，其中也会对北京朝阳区宠物医院哪个好进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、.</p>
             </div>
         </div>
     </div>
@@ -172,8 +172,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-3-7-free-node-subscribe.htm">3月7日更新22.8M/S，2025年最新高速SSR/Shadowrocket/Clash/V2ray订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了香港、加拿大、美国、新加坡、欧洲、日本、韩国等地区,最高速度可达22.8 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/news/article-89339.htm">动物疫苗使用方法（动物疫苗接种方法有哪些）</a></h4>
+                <p>摘要：       本篇文章给大家谈谈动物疫苗使用方法，以及动物疫苗接种方法有哪些对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、狗狗疫苗怎么打2、...        本篇文</p>
             </div>
         </div>
     </div>
@@ -182,8 +182,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-67402.htm">宠物寄养协议书简单版（宠物狗寄养协议）</a></h4>
-                <p>摘要：       今天给各位分享宠物寄养协议书简单版的知识，其中也会对宠物狗寄养协议进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、宠物领养协议书2、... </p>
+                <h4><a href="/free-nodes/2025-3-3-clash-windows.htm">3月3日更新20.5M/S，2025年最新高速Clash/Shadowrocket/SSR/V2ray订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了香港、日本、韩国、加拿大、美国、欧洲、新加坡等地区,最高速度可达20.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -192,8 +192,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-67401.htm">动物诊疗许可证申领准备材料清单（动物诊疗许可证申领条件）</a></h4>
-                <p>摘要：       本篇文章给大家谈谈动物诊疗许可证申领准备材料清单，以及动物诊疗许可证申领条件对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、开宠物店需要办理哪些手续?具..</p>
+                <h4><a href="/news/article-74611.htm">Linux中信号量源码的详细解析</a></h4>
+                <p>如果一个任务获取信号量失败，该任务就必须等待，直到其他任务释放信号量。本文的重点是，在Linux中，当有任务释放信号量之后，如何唤醒正在等待该信号量的任务。 信号量定义如下： struct semap</p>
             </div>
         </div>
     </div>
@@ -202,8 +202,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-3-27-free-high-speed-nodes.htm">3月27日更新19.5M/S，2025年最新高速Shadowrocket/V2ray/SSR/Clash订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了韩国、美国、欧洲、香港、日本、新加坡、加拿大等地区,最高速度可达19.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/news/article-85728.htm">和田宠物医院污水处理价格多少（宠物店污水处理设备）</a></h4>
+                <p>摘要：       今天给各位分享和田宠物医院污水处理价格多少的知识，其中也会对宠物店污水处理设备进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、宠物医院未配.</p>
             </div>
         </div>
     </div>
@@ -212,8 +212,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-3-5-free-ssr-subscribe.htm">3月5日更新20M/S，2025年最新高速Shadowrocket/SSR/Clash/V2ray订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了加拿大、香港、日本、美国、新加坡、欧洲、韩国等地区,最高速度可达20 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/news/article-82152.htm">领养宠物用什么软件（领养宠物去什么平台比较好）</a></h4>
+                <p>摘要：       今天给各位分享领养宠物用什么软件的知识，其中也会对领养宠物去什么平台比较好进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、如何在新版QQ空.</p>
             </div>
         </div>
     </div>
@@ -222,8 +222,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-4-1-free-v2ray.htm">4月1日更新18.2M/S，2025年最新高速V2ray/Clash/SSR/Shadowrocket订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了美国、日本、加拿大、欧洲、香港、新加坡、韩国等地区,最高速度可达18.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/news/article-76655.htm">vue2.x版本中computed和watch的使用入门详解-关联和区别_在线工具</a></h4>
+                <p>前面两篇介绍了computed和watch的基本使用   watch篇 computed篇  两者的区别，继续通过代码实现的方式具体去了解 html &lt;li&gt;最开始的value值：{{ n</p>
             </div>
         </div>
     </div>
@@ -232,8 +232,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-71945.htm">宠物粮厂家招聘最新信息（宠物粮基地）</a></h4>
-                <p>摘要：       本篇文章给大家谈谈宠物粮厂家招聘最新信息，以及宠物粮基地对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、浙江宠物干粮生产厂家哪家好...        本篇</p>
+                <h4><a href="/news/article-88624.htm">东北农大动物医院价目表查询（东北农大动物医院价目表查询最新）</a></h4>
+                <p>摘要：       今天给各位分享东北农大动物医院价目表查询的知识，其中也会对东北农大动物医院价目表查询最新进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、农.</p>
             </div>
         </div>
     </div>
@@ -244,7 +244,7 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                                <h4><span class="badge" style="float: right;">8</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
+                                <h4><span class="badge" style="float: right;">19</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
                                 <h4><span class="badge" style="float: right;">85</span> <a href="/date/2025-03/" title="2025-03 归档">2025-03</a></h4>
                             </div>
         </div>
@@ -259,15 +259,17 @@
             <div class="footer-content">
                 <div class="row">
                     <div class="col-lg-8 footer-left">
-                            <p>
-                                <a href="/">首页</a> | 
-                                <a href="/free-node/">免费节点</a> | 
-                                <a href="/news/">新闻资讯</a> |
-                                <a href="/about-us.htm">关于我们</a> |
-                                <a href="/disclaimer.htm">免责申明</a> |
-                                <a href="/privacy.htm">隐私申明</a> |
-                                <a href="/sitemap.xml">网站地图</a>
-                            </p>
+                                            <p>
+                                                <a href="/">首页</a> |
+                                                <a href="/free-nodes/">免费节点</a> |
+                                                <a href="/paid-subscribe/">推荐机场</a> |
+                                                <a href="/client.htm">客户端</a> |
+                                                <a href="/news/">新闻资讯</a> |
+                                                <a href="/about-us.htm">关于我们</a> |
+                        <a href="/disclaimer.htm">免责申明</a> |
+                        <a href="/privacy.htm">隐私申明</a> |
+                        <a href="/sitemap.xml">网站地图</a>
+                    </p>
                         <p class="m-0">Clash Node官网订阅站 版权所有</p>
                     </div>
                     <div class="col-lg-4 footer-right text-lg-right text-center mt-lg-0 mt-3">
