--- a/free-nodes/2025-4-3-shadowrocket-node.htm
+++ b/free-nodes/2025-4-3-shadowrocket-node.htm
@@ -140,6 +140,7 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
 <p style="margin-bottom:3rem;color:#999;font-style:italic;">注：跳转链接可能会 <b style="color:red;">被墙</b> ，如多次打开失败，请先使用下面不稳定免费订阅后，再尝试点击链接</p><p>&nbsp;</p><p></p><h2>订阅链接</h2><p>&nbsp;</p><p><strong>clash订阅链接</strong></p><p>https://clashnode.github.io/uploads/2025/04/2-20250403.yaml</p><p>https://clashnode.github.io/uploads/2025/04/3-20250403.yaml</p><p>&nbsp;</p><p><strong>v2ray订阅链接:</strong></p><p>https://clashnode.github.io/uploads/2025/04/1-20250403.txt</p><p>https://clashnode.github.io/uploads/2025/04/2-20250403.txt</p><p><strong>sing-box订阅链接</strong></p><p>https://clashnode.github.io/uploads/2025/04/20250403.json</p><p>&nbsp;</p><p>如果您需要高质量的付费服务,我们强烈推荐您试试「<a href="javascript:;" class="js_to" data-url="https://eded.keley02.top/#/login?code=" data-type="Keleyun" data-code="2gL62wdk" rel="nofollow noopener" style="color:#c00;">可乐云</a> 」。提供全球范围内快速稳定的高速节点,轻松处理8K高清视频流量,并可解锁流媒体网站和chatGPT。其服务器性能出色,确保您享受到高品质的体验。</p>                <div class="clearfix"></div>
                 <div class="col-md-12 mt-5">
                                         <p>上一个：<a href="/free-nodes/2025-4-1-free-v2ray.htm">4月1日更新18.2M/S，2025年最新高速V2ray/Clash/SSR/Shadowrocket订阅链接免费节点地址分享</a></p>
+                                        <p>下一个：<a href="/free-nodes/2025-4-4-free-high-speed-nodes.htm">4月4日更新20.5M/S，2025年最新高速Shadowrocket/Clash/V2ray/SSR订阅链接免费节点地址分享</a></p>
                                     </div>
                                 <div class="panel panel-default mt-5">
                     <div class="panel-heading">
@@ -167,6 +168,46 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
+                <h4><a href="/news/article-81477.htm">动物疫苗可以自己打吗现在（动物疫苗可以自己打吗现在疫情）</a></h4>
+                <p>摘要：       今天给各位分享动物疫苗可以自己打吗现在的知识，其中也会对动物疫苗可以自己打吗现在疫情进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、怎么自.</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/news/article-76655.htm">vue2.x版本中computed和watch的使用入门详解-关联和区别_在线工具</a></h4>
+                <p>前面两篇介绍了computed和watch的基本使用   watch篇 computed篇  两者的区别，继续通过代码实现的方式具体去了解 html &lt;li&gt;最开始的value值：{{ n</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/news/article-69328.htm">Java 18为什么要指定UTF-8为默认字符集_在线工具</a></h4>
+                <p>在Java 18中，将UTF-8指定为标准Java API的默认字符集。有了这一更改，依赖于默认字符集的API将在所有实现、操作系统、区域设置和配置中保持一致。 做这一更改的主要目标：  当Java程</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/news/article-73268.htm">宠物疫苗自己打可以吗（宠物疫苗自己打可以吗现在）</a></h4>
+                <p>摘要：       本篇文章给大家谈谈宠物疫苗自己打可以吗，以及宠物疫苗自己打可以吗现在对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、可以自己给狗打疫苗吗2、...     </p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
                 <h4><a href="/news/article-85008.htm">制作狗粮机器多少钱一套（自制狗粮机）</a></h4>
                 <p>摘要：       本篇文章给大家谈谈制作狗粮机器多少钱一套，以及自制狗粮机对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、火腿肠加工机器多少钱2、...        本篇文</p>
             </div>
@@ -177,8 +218,8 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-3-15-free-v2ray-subscribe.htm">3月15日更新18.9M/S，2025年最新高速SSR/Clash/V2ray/Shadowrocket订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了加拿大、欧洲、韩国、美国、日本、香港、新加坡等地区,最高速度可达18.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/news/article-84290.htm">@NotEmpty、@NotBlank等注解的正确使用 @Validated和@Valid的区别 解决@NotBlank等注解不生效的问题 使用BindingResult进行接口请求参数的统一校验</a></h4>
+                <p>文章目录  1. 问题说明 2. 配置依赖 3. 编写注解的bean 4. 常用注解说明   4.1 空检查 4.2 布尔检查 4.3 长度检查 4.4 日期检查 4.5 数值检查   5. 编写co</p>
             </div>
         </div>
     </div>
@@ -187,8 +228,8 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-3-16-free-ssr-node.htm">3月16日更新21.5M/S，2025年最新高速SSR/V2ray/Clash/Shadowrocket订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了欧洲、韩国、日本、加拿大、新加坡、香港、美国等地区,最高速度可达21.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2025-3-6-free-v2ray-subscribe.htm">3月6日更新19.1M/S，2025年最新高速V2ray/Clash/SSR/Shadowrocket订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了香港、加拿大、新加坡、日本、欧洲、韩国、美国等地区,最高速度可达19.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -197,8 +238,8 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-85729.htm">长沙宠物领养贴吧 长沙宠物领养贴吧论坛</a></h4>
-                <p>摘要：       大家好，今天小编关注到一个比较有意思的话题，就是关于长沙宠物领养贴吧的问题，于是小编就整理了4个相关介绍长沙宠物领养贴吧的解答，让我们一起看看吧。请问长沙有没有收留藏獒的地方？长沙</p>
+                <h4><a href="/news/article-66141.htm">生产狗粮利润大吗（狗粮生产赚钱吗）</a></h4>
+                <p>摘要：       今天给各位分享生产狗粮利润大吗的知识，其中也会对狗粮生产赚钱吗进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、开个狗粮加工厂挣钱吗...  </p>
             </div>
         </div>
     </div>
@@ -207,8 +248,8 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-82872.htm">Java中的append方法是什么？</a></h4>
-                <p>java.lang.StringBuffer的append（char c）方法将char参数的字符串表示形式附加到此序列。参数将附加到此序列的内容中。该序列的长度增加1。 示例 import&nbsp</p>
+                <h4><a href="/free-nodes/2025-3-8-node-share.htm">3月8日更新20M/S，2025年最新高速V2ray/SSR/Shadowrocket/Clash订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了加拿大、香港、美国、新加坡、韩国、日本、欧洲等地区,最高速度可达20 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -217,48 +258,8 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-67402.htm">宠物寄养协议书简单版（宠物狗寄养协议）</a></h4>
-                <p>摘要：       今天给各位分享宠物寄养协议书简单版的知识，其中也会对宠物狗寄养协议进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、宠物领养协议书2、... </p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-3-23-free-shadowrocket-node.htm">3月23日更新19.5M/S，2025年最新高速Shadowrocket/Clash/SSR/V2ray订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了加拿大、日本、韩国、美国、欧洲、香港、新加坡等地区,最高速度可达19.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
-                <h4><a href="/news/article-78006.htm">C#自定义配置文件方法详解_在线工具</a></h4>
-                <p>.NET程序中，经常使用Config文件来配置应用程序中经常使用的值，比如数据库连接字符串。最近项目遇到一个需要配置好多节点在配置文件中的需求。为了使配置节点整洁易维护，在代码调用时也保证获取时比较直</p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
-                <h4><a href="/news/article-82153.htm">宠物领养协议书范本最新版下载 宠物领养协议书范本最新版下载图片</a></h4>
-                <p>摘要：       大家好，今天小编关注到一个比较有意思的话题，就是关于宠物领养协议书范本最新版下载的问题，于是小编就整理了4个相关介绍宠物领养协议书范本最新版下载的解答，让我们一起看看吧。宠物领养平</p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
-                <h4><a href="/news/article-80772.htm">十大冷门暴利生意(最挣钱没人干的行业有哪些?)（冷门生意有哪些十大冷门生意利润高）</a></h4>
-                <p>摘要：       本篇文章给大家谈谈十大冷门暴利生意(最挣钱没人干的行业有哪些?)，以及冷门生意有哪些十大冷门生意利润高对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、有..</p>
+                <h4><a href="/news/article-83586.htm">猫抓了出血了可以不打疫苗吗猫（猫抓了一下出了点血不打疫苗可以吗）</a></h4>
+                <p>摘要：       今天给各位分享猫抓了出血了可以不打疫苗吗猫的知识，其中也会对猫抓了一下出了点血不打疫苗可以吗进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1.</p>
             </div>
         </div>
     </div>
@@ -269,7 +270,7 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                                <h4><span class="badge" style="float: right;">8</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
+                                <h4><span class="badge" style="float: right;">16</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
                                 <h4><span class="badge" style="float: right;">85</span> <a href="/date/2025-03/" title="2025-03 归档">2025-03</a></h4>
                             </div>
         </div>
@@ -284,15 +285,17 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
             <div class="footer-content">
                 <div class="row">
                     <div class="col-lg-8 footer-left">
-                            <p>
-                                <a href="/">首页</a> | 
-                                <a href="/free-node/">免费节点</a> | 
-                                <a href="/news/">新闻资讯</a> |
-                                <a href="/about-us.htm">关于我们</a> |
-                                <a href="/disclaimer.htm">免责申明</a> |
-                                <a href="/privacy.htm">隐私申明</a> |
-                                <a href="/sitemap.xml">网站地图</a>
-                            </p>
+                                            <p>
+                                                <a href="/">首页</a> |
+                                                <a href="/free-nodes/">免费节点</a> |
+                                                <a href="/paid-subscribe/">推荐机场</a> |
+                                                <a href="/client.htm">客户端</a> |
+                                                <a href="/news/">新闻资讯</a> |
+                                                <a href="/about-us.htm">关于我们</a> |
+                        <a href="/disclaimer.htm">免责申明</a> |
+                        <a href="/privacy.htm">隐私申明</a> |
+                        <a href="/sitemap.xml">网站地图</a>
+                    </p>
                         <p class="m-0">Clash Node官网订阅站 版权所有</p>
                     </div>
                     <div class="col-lg-4 footer-right text-lg-right text-center mt-lg-0 mt-3">
